First working version

--- a/config/motioneye.conf
+++ b/config/motioneye.conf
@@ -3,7 +3,7 @@
 conf_path REPLACELBPCONFIGDIR
 
 # path to the directory where pid files go (must be writable by motionEye)
-run_path /var/run
+run_path REPLACELBPLOGDIR
 
 # path to the directory where log files go (must be writable by motionEye)
 log_path REPLACELBPLOGDIR
